# apollo

./: TODO.txt
backend/: .gitignore  Cargo.toml  financial_data.json
backend/apiTesting/: apiTest.ipynb
backend/src/: delete_me.ipynb  main.rs
backend/src/api/: api.rs  mod.rs
backend/src/requests/: mod.rs  requests.rs  structs.rs
backend/src/requests/auth/: client.rs  cookie.rs
backend/src/requests/base/: base.rs  cach.rs  data.rs  logger.rs
backend/src/requests/domain/: domain.rs  sector.rs
backend/src/requests/fundamentals/: fundamentals.rs
backend/src/requests/markets/: markets.rs
backend/src/requests/types/: market.rs
backend/src/utils/: json_utils.rs  mod.rs
backend/src/web_scraper/: mod.rs  web_scraper.rs
backend/src/yahoo/: mod.rs
backend/src/yahoo/base/: base.rs  cache.rs  data.rs  exceptions.rs  logger.rs  mod.rs  utils.rs
backend/src/yahoo/constants/: mod.rs  sectors.rs  url.rs  user_agents.rs
backend/src/yahoo/domain/: domain.rs  mod.rs  sector.rs
backend/src/yahoo/screener/: mod.rs
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: App.js  MessageSender.js  WebSocketContext.js
frontend/src/app/: App.tsx
frontend/src/components/: WebSocketContext.tsx  gridStack.tsx  sideBar.tsx
