[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4"
actix-ws = "0.3.0"
cargo-watch = "8.5.3"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
reqwest = "0.12.12"
scraper = "0.22.0"
tokio = { version = "1", features = ["full"] }
