[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4"
actix-ws = "0.3.0"
dirs-next = "2.0.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
lru = "0.13.0"
once_cell = "1.21.3"
polars = "0.46.0"
rand = "0.9.0"
reqwest = {version="0.12.12", features=["json", "cookies"]}
rusqlite = "0.34.0"
scraper = "0.22.0"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
